--- a/user_config.toml
+++ b/user_config.toml
@@ -32,8 +32,8 @@ cookies = 'www.catchplay.com_cookies.txt'
 cookies = 'www.crunchyroll.com_cookies.txt'
 
 [credentials.DisneyPlus]
-email = ''
-password = ''
+email = 'jinf4fb@naver.com'
+password = '0plko98?'
 
 [credentials.FridayVideo]
 cookies = 'video.friday.tw_cookies.txt'
